fix body height < 100% bug on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,7 +135,7 @@ td.six {
 }
 
 html {
-	min-height: 100%;
+	height: 100%;
 }
 body {
 	font-family: "Arial";
